--- a/flask_mysql/dockerfile
+++ b/flask_mysql/dockerfile
@@ -2,13 +2,11 @@ FROM python
 
 WORKDIR /flask_mysql
 
-run pip install requirements.txt
-
-COPY app.py  .
-
 COPY ./ ./
+
+CMD [pip install -r requirements.txt]
 
 EXPOSE 3000
 
-CMD [app.py]
+
 
