--- a/flask_mysql/dockerfile
+++ b/flask_mysql/dockerfile
@@ -4,9 +4,9 @@ WORKDIR /flask_mysql
 
 COPY ./ ./
 
-CMD [pip install -r requirements.txt]
+RUN pip3 install -r requirements.txt
 
-EXPOSE 3000
+EXPOSE 5000
 
-
+CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0"]
 
